# ClearAIR

./: .gitignore  LICENSE  README.md  clearair_environment.txt  pyproject.toml
scripts/: setup_real_aux.sh
scripts/patches/: daclip-device-agnostic.patch  deqa-transformers-446.patch
src/: __init__.py  auxiliary.py  blocks.py  dataset.py  infer.py  losses.py  model.py  modules.py  real_auxiliary.py  smoke_test.py  train.py
tests/: test_auxiliary.py  test_losses.py
