[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clearair"
version = "0.1.0"
description = "Reference implementation scaffold for ClearAIR"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ClearAIR Authors" }]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
]

[project.optional-dependencies]
real-aux = [
    "accelerate>=1.0",
    "bitsandbytes>=0.47",
    "ftfy>=6.1",
    "huggingface-hub>=0.35,<1.0",
    "hydra-core>=1.3.2",
    "icecream>=2.1",
    "iopath>=0.1.10",
    "sentencepiece>=0.2",
    "transformers==4.46.3",
]

[project.scripts]
clearair-train = "clearair.train:main"
clearair-infer = "clearair.infer:main"

[tool.setuptools]
packages = ["clearair"]
package-dir = { clearair = "src" }
